Initial build clinical model

--- a/clinical_model/data_extraction.ipynb
+++ b/clinical_model/data_extraction.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "f3bc7fce",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "c5df13f9",
    "metadata": {},
    "outputs": [
@@ -74,9 +74,14 @@
          "type": "integer"
         },
         {
-         "name": "Baseline sum diameter",
-         "rawType": "float64",
-         "type": "float"
+         "name": "largestsize",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "distribution",
+         "rawType": "object",
+         "type": "string"
         },
         {
          "name": "synchr",
@@ -110,14 +115,15 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "47c9d373-5fdd-454e-ba89-275d243bea03",
+       "ref": "b94d2e82-8b92-4b54-9d37-7935b7292a8c",
        "rows": [
         [
          "0",
          "1",
          "Female",
          "56",
-         "139.0",
+         "62",
+         "Bilobar",
          "Synchronous",
          "Left",
          "0",
@@ -130,7 +136,8 @@
          "2",
          "Male",
          "65",
-         null,
+         "34",
+         "Bilobar",
          "Synchronous",
          "Left",
          "0",
@@ -143,7 +150,8 @@
          "3",
          "Male",
          "55",
-         null,
+         "48",
+         "Bilobar",
          "Synchronous",
          "Left",
          "1",
@@ -156,7 +164,8 @@
          "4",
          "Female",
          "35",
-         "140.0",
+         "67",
+         "Bilobar",
          "Synchronous",
          "Left",
          "0",
@@ -169,7 +178,8 @@
          "5",
          "Female",
          "57",
-         null,
+         "38",
+         "Bilobar",
          "Synchronous",
          "Right",
          "0",
@@ -179,7 +189,7 @@
         ]
        ],
        "shape": {
-        "columns": 10,
+        "columns": 11,
         "rows": 5
        }
       },
@@ -205,7 +215,8 @@
        "      <th>SubjectKey</th>\n",
        "      <th>sex</th>\n",
        "      <th>Age</th>\n",
-       "      <th>Baseline sum diameter</th>\n",
+       "      <th>largestsize</th>\n",
+       "      <th>distribution</th>\n",
        "      <th>synchr</th>\n",
        "      <th>sidedness</th>\n",
        "      <th>KRAS</th>\n",
@@ -220,7 +231,8 @@
        "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>56</td>\n",
-       "      <td>139.0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>Bilobar</td>\n",
        "      <td>Synchronous</td>\n",
        "      <td>Left</td>\n",
        "      <td>0</td>\n",
@@ -233,7 +245,8 @@
        "      <td>2</td>\n",
        "      <td>Male</td>\n",
        "      <td>65</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Bilobar</td>\n",
        "      <td>Synchronous</td>\n",
        "      <td>Left</td>\n",
        "      <td>0</td>\n",
@@ -246,7 +259,8 @@
        "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>55</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Bilobar</td>\n",
        "      <td>Synchronous</td>\n",
        "      <td>Left</td>\n",
        "      <td>1</td>\n",
@@ -259,7 +273,8 @@
        "      <td>4</td>\n",
        "      <td>Female</td>\n",
        "      <td>35</td>\n",
-       "      <td>140.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>Bilobar</td>\n",
        "      <td>Synchronous</td>\n",
        "      <td>Left</td>\n",
        "      <td>0</td>\n",
@@ -272,7 +287,8 @@
        "      <td>5</td>\n",
        "      <td>Female</td>\n",
        "      <td>57</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>38</td>\n",
+       "      <td>Bilobar</td>\n",
        "      <td>Synchronous</td>\n",
        "      <td>Right</td>\n",
        "      <td>0</td>\n",
@@ -285,12 +301,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   SubjectKey     sex  Age  Baseline sum diameter       synchr sidedness  \\\n",
-       "0           1  Female   56                  139.0  Synchronous      Left   \n",
-       "1           2    Male   65                    NaN  Synchronous      Left   \n",
-       "2           3    Male   55                    NaN  Synchronous      Left   \n",
-       "3           4  Female   35                  140.0  Synchronous      Left   \n",
-       "4           5  Female   57                    NaN  Synchronous     Right   \n",
+       "   SubjectKey     sex  Age  largestsize distribution       synchr sidedness  \\\n",
+       "0           1  Female   56           62      Bilobar  Synchronous      Left   \n",
+       "1           2    Male   65           34      Bilobar  Synchronous      Left   \n",
+       "2           3    Male   55           48      Bilobar  Synchronous      Left   \n",
+       "3           4  Female   35           67      Bilobar  Synchronous      Left   \n",
+       "4           5  Female   57           38      Bilobar  Synchronous     Right   \n",
        "\n",
        "   KRAS  NRAS  BRAF  treatment  \n",
        "0     0     0     1   FOLFOX-B  \n",
@@ -300,72 +316,37 @@
        "4     0     0     0  FOLFIRI-B  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "training_data = all_data[[\"SubjectKey\", \"sex\", \"Age\", \"Baseline sum diameter\", \"synchr\", \"sidedness\", \"KRAS\", \"NRAS\", \"BRAF\", \"treatment\"]]\n",
+    "training_data = all_data[[\"SubjectKey\", \"sex\", \"Age\", \"largestsize\", \"distribution\", \"synchr\", \"sidedness\", \"KRAS\", \"NRAS\", \"BRAF\", \"treatment\"]]\n",
     "training_data.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "fa053eaa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\P095550\\AppData\\Roaming\\MobaXterm\\slash\\var\\log\\xwin\\ipykernel_11808\\3728811255.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  training_data[\"male\"] = training_data[\"sex\"].apply(lambda x: 1 if x == \"Male\" else 0)\n",
-      "C:\\Users\\P095550\\AppData\\Roaming\\MobaXterm\\slash\\var\\log\\xwin\\ipykernel_11808\\3728811255.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  training_data[\"synchr\"] = training_data[\"synchr\"].apply(lambda x: 1 if x == \"Synchronous\" else 0)\n",
-      "C:\\Users\\P095550\\AppData\\Roaming\\MobaXterm\\slash\\var\\log\\xwin\\ipykernel_11808\\3728811255.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  training_data[\"left_sidedness\"] = training_data[\"sidedness\"].apply(lambda x: 1 if x == \"Left\" else 0)\n",
-      "C:\\Users\\P095550\\AppData\\Roaming\\MobaXterm\\slash\\var\\log\\xwin\\ipykernel_11808\\3728811255.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  training_data[\"bevacizumab\"] = training_data[\"treatment\"].apply(lambda x: 1 if x.endswith(\"B\") else 0)\n",
-      "C:\\Users\\P095550\\AppData\\Roaming\\MobaXterm\\slash\\var\\log\\xwin\\ipykernel_11808\\3728811255.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  training_data.drop(columns=[\"sex\", \"sidedness\", \"treatment\"], inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Correctly apply transformations to columns\n",
     "training_data[\"male\"] = training_data[\"sex\"].apply(lambda x: 1 if x == \"Male\" else 0)\n",
     "training_data[\"synchr\"] = training_data[\"synchr\"].apply(lambda x: 1 if x == \"Synchronous\" else 0)\n",
     "training_data[\"left_sidedness\"] = training_data[\"sidedness\"].apply(lambda x: 1 if x == \"Left\" else 0)\n",
     "training_data[\"bevacizumab\"] = training_data[\"treatment\"].apply(lambda x: 1 if x.endswith(\"B\") else 0)\n",
+    "training_data[\"bilobar\"] = training_data[\"distribution\"].apply(lambda x: 1 if x == \"Bilobar\" else 0)\n",
     "\n",
     "# Drop the original columns if they are no longer needed\n",
-    "training_data.drop(columns=[\"sex\", \"sidedness\", \"treatment\"], inplace=True)"
+    "training_data.drop(columns=[\"sex\", \"sidedness\", \"treatment\", \"distribution\"], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "5392ed7e",
    "metadata": {},
    "outputs": [
@@ -373,16 +354,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SubjectKey                0\n",
-      "Age                       0\n",
-      "Baseline sum diameter    95\n",
-      "synchr                    0\n",
-      "KRAS                      0\n",
-      "NRAS                      0\n",
-      "BRAF                      0\n",
-      "male                      0\n",
-      "left_sidedness            0\n",
-      "bevacizumab               0\n",
+      "SubjectKey        0\n",
+      "Age               0\n",
+      "largestsize       0\n",
+      "synchr            0\n",
+      "KRAS              0\n",
+      "NRAS              0\n",
+      "BRAF              0\n",
+      "male              0\n",
+      "left_sidedness    0\n",
+      "bevacizumab       0\n",
+      "bilobar           0\n",
       "dtype: int64\n"
      ]
     }
@@ -395,6 +377,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "534459f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Subset the data to only include patients which we have CT scans for\n",
+    "\n",
+    "paired_scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Training/paired_scans\"\n",
+    "subject_keys = set()\n",
+    "for filename in os.listdir(paired_scans_path):\n",
+    "    subject_keys.add(int(filename[6:9]))\n",
+    "\n",
+    "training_data = training_data[training_data[\"SubjectKey\"].isin(subject_keys)]\n",
+    "\n",
+    "training_data.drop(columns=[\"SubjectKey\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "38f5c949",
    "metadata": {},
    "outputs": [],
