further development of  clinical model

--- a/Clinical_data_preparation.ipynb
+++ b/Clinical_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\P095550\\OneDrive - Amsterdam UMC\\Documenten\\GitHub\\CRLM-morph-features\\.venv\\lib\\site-packages\\openpyxl\\worksheet\\_reader.py:329: UserWarning: Unknown extension is not supported and will be removed\n",
+      "c:\\Users\\P095550\\Documents\\CRLM-morph-features\\CRLM-morph-features\\.venv\\lib\\site-packages\\openpyxl\\worksheet\\_reader.py:329: UserWarning: Unknown extension is not supported and will be removed\n",
       "  warn(msg)\n"
      ]
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "32944218-9958-4efa-84ee-9cfd71564950",
+       "ref": "d00e1956-95a4-422e-b096-ad8d94f93a5f",
        "rows": [
         [
          "0",
@@ -339,7 +339,7 @@
        "4           5     0     0     0  FOLFIRI-B   1.609856   4.435318"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,6 +1388,158 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Create OS targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_2144\\2120867684.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_targets_OS.drop(columns=[\"SubjectKey\"], inplace= True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "training_targets_OS = training_data[[\"SubjectKey\", \"OSm\"]]\n",
+    "training_targets_OS.drop(columns=[\"SubjectKey\"], inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "OSm",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "081a056b-8d91-4693-9ea8-07d977c3a649",
+       "rows": [
+        [
+         "0",
+         "22.40657084188912"
+        ],
+        [
+         "1",
+         "37.35523613963039"
+        ],
+        [
+         "2",
+         "84.82956878850102"
+        ],
+        [
+         "3",
+         "44.61601642710473"
+        ],
+        [
+         "4",
+         "51.28542094455852"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OSm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.406571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37.355236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>84.829569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>44.616016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>51.285421</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         OSm\n",
+       "0  22.406571\n",
+       "1  37.355236\n",
+       "2  84.829569\n",
+       "3  44.616016\n",
+       "4  51.285421"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_targets_OS.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_targets_OS.to_csv('training_targets_OS.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Create OS labels"
    ]
   },
@@ -1552,6 +1704,387 @@
    "source": [
     "# Export the selected columns to a CSV file\n",
     "training_labels_OS.to_csv('training_labels_OS.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create path. response labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "SubjectKey",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "KRAS",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "BRAF",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "NRAS",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "treatment",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "PFSm",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "OSm",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "TRG_cat",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "969f9519-197a-4c47-aaa2-3ca8b1809331",
+       "rows": [
+        [
+         "0",
+         "1",
+         "0",
+         "1",
+         "0",
+         "FOLFOX-B",
+         "11.40041067761807",
+         "22.40657084188912",
+         null
+        ],
+        [
+         "1",
+         "4",
+         "0",
+         "0",
+         "0",
+         "FOLFOX-P",
+         "21.88090349075975",
+         "37.35523613963039",
+         null
+        ],
+        [
+         "2",
+         "7",
+         "1",
+         "0",
+         "0",
+         "FOLFOXIRI-B",
+         "84.82956878850102",
+         "84.82956878850102",
+         "Major histological response"
+        ],
+        [
+         "3",
+         "10",
+         "0",
+         "0",
+         "0",
+         "FOLFOX-B",
+         "6.275154004106777",
+         "44.61601642710473",
+         "No histological response"
+        ],
+        [
+         "4",
+         "12",
+         "0",
+         "0",
+         "0",
+         "FOLFOX-P",
+         "7.62217659137577",
+         "51.28542094455852",
+         null
+        ]
+       ],
+       "shape": {
+        "columns": 8,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SubjectKey</th>\n",
+       "      <th>KRAS</th>\n",
+       "      <th>BRAF</th>\n",
+       "      <th>NRAS</th>\n",
+       "      <th>treatment</th>\n",
+       "      <th>PFSm</th>\n",
+       "      <th>OSm</th>\n",
+       "      <th>TRG_cat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>FOLFOX-B</td>\n",
+       "      <td>11.400411</td>\n",
+       "      <td>22.406571</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>FOLFOX-P</td>\n",
+       "      <td>21.880903</td>\n",
+       "      <td>37.355236</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>FOLFOXIRI-B</td>\n",
+       "      <td>84.829569</td>\n",
+       "      <td>84.829569</td>\n",
+       "      <td>Major histological response</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>FOLFOX-B</td>\n",
+       "      <td>6.275154</td>\n",
+       "      <td>44.616016</td>\n",
+       "      <td>No histological response</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>FOLFOX-P</td>\n",
+       "      <td>7.622177</td>\n",
+       "      <td>51.285421</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SubjectKey  KRAS  BRAF  NRAS    treatment       PFSm        OSm  \\\n",
+       "0           1     0     1     0     FOLFOX-B  11.400411  22.406571   \n",
+       "1           4     0     0     0     FOLFOX-P  21.880903  37.355236   \n",
+       "2           7     1     0     0  FOLFOXIRI-B  84.829569  84.829569   \n",
+       "3          10     0     0     0     FOLFOX-B   6.275154  44.616016   \n",
+       "4          12     0     0     0     FOLFOX-P   7.622177  51.285421   \n",
+       "\n",
+       "                       TRG_cat  \n",
+       "0                          NaN  \n",
+       "1                          NaN  \n",
+       "2  Major histological response  \n",
+       "3     No histological response  \n",
+       "4                          NaN  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_labels_path = training_data[[\"SubjectKey\", \"TRG_cat\"]]\n",
+    "\n",
+    "# remove rows with nan for trg_cat\n",
+    "training_labels_path = training_labels_path.dropna(subset=['TRG_cat'])\n",
+    "\n",
+    "training_labels_path['complete_response'] = (training_labels_path['TRG_cat'] == 'No histological response').astype(int)\n",
+    "\n",
+    "training_labels_path.drop(columns=[\"SubjectKey\",\"TRG_cat\"], inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "complete_response",
+         "rawType": "int32",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "befa9e28-3dda-4312-974b-abbde5fdc478",
+       "rows": [
+        [
+         "2",
+         "0"
+        ],
+        [
+         "3",
+         "1"
+        ],
+        [
+         "5",
+         "1"
+        ],
+        [
+         "6",
+         "0"
+        ],
+        [
+         "8",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>complete_response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   complete_response\n",
+       "2                  0\n",
+       "3                  1\n",
+       "5                  1\n",
+       "6                  0\n",
+       "8                  1"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_labels_path.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the training_labels_path to a CSV file in the folder training_data\n",
+    "output_path = \"training_data/training_labels_path.csv\"\n",
+    "training_labels_path.to_csv(output_path, index=False)"
    ]
   },
   {
