--- a/clinical_model/data_extraction.ipynb
+++ b/clinical_model/data_extraction.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c5df13f9",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b94d2e82-8b92-4b54-9d37-7935b7292a8c",
+       "ref": "176cafc4-24ab-442c-b641-748bdb3a3d02",
        "rows": [
         [
          "0",
@@ -316,7 +316,7 @@
        "4     0     0     0  FOLFIRI-B  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,10 +328,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fa053eaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_20448\\1339409709.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_data[\"male\"] = training_data[\"sex\"].apply(lambda x: 1 if x == \"Male\" else 0)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_20448\\1339409709.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_data[\"synchr\"] = training_data[\"synchr\"].apply(lambda x: 1 if x == \"Synchronous\" else 0)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_20448\\1339409709.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_data[\"left_sidedness\"] = training_data[\"sidedness\"].apply(lambda x: 1 if x == \"Left\" else 0)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_20448\\1339409709.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_data[\"bevacizumab\"] = training_data[\"treatment\"].apply(lambda x: 1 if x.endswith(\"B\") else 0)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_20448\\1339409709.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_data[\"bilobar\"] = training_data[\"distribution\"].apply(lambda x: 1 if x == \"Bilobar\" else 0)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_20448\\1339409709.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_data.drop(columns=[\"sex\", \"sidedness\", \"treatment\", \"distribution\"], inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Correctly apply transformations to columns\n",
     "training_data[\"male\"] = training_data[\"sex\"].apply(lambda x: 1 if x == \"Male\" else 0)\n",
@@ -346,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5392ed7e",
    "metadata": {},
    "outputs": [
@@ -376,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "534459f9",
    "metadata": {},
    "outputs": [],
@@ -395,7 +437,273 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
+   "id": "412fcf13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Age",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "largestsize",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "synchr",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "KRAS",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "NRAS",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "BRAF",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "male",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "left_sidedness",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "bevacizumab",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "bilobar",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "c41ae09a-dc6c-4381-8420-c55eb670094d",
+       "rows": [
+        [
+         "0",
+         "56",
+         "62",
+         "1",
+         "0",
+         "0",
+         "1",
+         "0",
+         "1",
+         "1",
+         "1"
+        ],
+        [
+         "3",
+         "35",
+         "67",
+         "1",
+         "0",
+         "0",
+         "0",
+         "0",
+         "1",
+         "0",
+         "1"
+        ],
+        [
+         "6",
+         "54",
+         "25",
+         "1",
+         "1",
+         "0",
+         "0",
+         "1",
+         "0",
+         "1",
+         "0"
+        ],
+        [
+         "7",
+         "33",
+         "59",
+         "1",
+         "0",
+         "0",
+         "0",
+         "0",
+         "1",
+         "1",
+         "1"
+        ],
+        [
+         "9",
+         "72",
+         "85",
+         "1",
+         "0",
+         "0",
+         "0",
+         "0",
+         "1",
+         "0",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 10,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>largestsize</th>\n",
+       "      <th>synchr</th>\n",
+       "      <th>KRAS</th>\n",
+       "      <th>NRAS</th>\n",
+       "      <th>BRAF</th>\n",
+       "      <th>male</th>\n",
+       "      <th>left_sidedness</th>\n",
+       "      <th>bevacizumab</th>\n",
+       "      <th>bilobar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35</td>\n",
+       "      <td>67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>54</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>33</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>72</td>\n",
+       "      <td>85</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  largestsize  synchr  KRAS  NRAS  BRAF  male  left_sidedness  \\\n",
+       "0   56           62       1     0     0     1     0               1   \n",
+       "3   35           67       1     0     0     0     0               1   \n",
+       "6   54           25       1     1     0     0     1               0   \n",
+       "7   33           59       1     0     0     0     0               1   \n",
+       "9   72           85       1     0     0     0     0               1   \n",
+       "\n",
+       "   bevacizumab  bilobar  \n",
+       "0            1        1  \n",
+       "3            0        1  \n",
+       "6            1        0  \n",
+       "7            1        1  \n",
+       "9            0        1  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "38f5c949",
    "metadata": {},
    "outputs": [],
